force-app/main/default/objects/Employee_Reporting__c/fields/Developer1__c.field-meta.xml
<CustomField>
    <fullName>Developer1__c</fullName>
    <label>Developer1</label>
    <referenceTo>Developer1__c</referenceTo>
    <relationshipLabel>Employee Reportings</relationshipLabel>
    <relationshipName>Employee_Reportings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>