force-app/main/default/objects/Employee_Reporting__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <referenceTo>Manager1__c</referenceTo>
    <relationshipLabel>Employee Reportings</relationshipLabel>
    <relationshipName>Employee_Reportings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>